src/components/Widgets/Widgets.module.css
.widgetWrapper {
  position: absolute;
  z-index: 1;
}

.textWrapper {
  height: 50px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.text {
  background: #fff;
  color: #888;
  font-weight: bold;
  padding: 5px;
  opacity: 0.75;
  filter: drop-shadow(0px 0px 3px #999);
  height: min-content;
}

.buttonsContainer {
  height: 30px;
  overflow-x: hidden;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.centerLeft {
  top: calc(50% - 30px);
  left: 0;
}

.centerRight {
  top: calc(50% - 30px);
  right: 0;
}

.topLeft {
  top: 0;
  left: 0;
}

.topCenter {
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

.topRight {
  top: 0;
  right: 0;
}

.bottomCenter {
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  width: fit-content;
}

